cluster/apps/mediaserver/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/version: 5.1.3-ls273
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/version: 5.1.3-ls273
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: linuxserver/sabnzbd:5.1.3-ls273@sha256:948ea3dc45d68943ec14b33ba37ffa1488da3e9837bf3ca0f75621e971614d85
        name: sabnzbd
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /api?mode=version
            port: 8080
          periodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: scripts
        configMap:
          name: sabnzbd-scripts
