cluster/apps/mediaserver/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/version: 5.1.3-ls273
  name: sabnzbd
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
  - name: http-sabnzbd
    port: 8080
    targetPort: 8080
