cluster/apps/mediaserver/sabnzbd/arr-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sabnzbd-arr-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - sonarr
          - radarr
          - lidarr
    ports:
    - port: 8080
      protocol: TCP
